--- a/finance/api/templates/login.html
+++ b/finance/api/templates/login.html
@@ -26,7 +26,7 @@
             margin-bottom: 20px;
         }
         input[type="text"], input[type="password"] {
-            width: 100%;
+            width: calc(100% - 20px); /* Ajuste para padding */
             padding: 10px;
             margin: 10px 0;
             border: 1px solid #ccc;
@@ -60,7 +60,7 @@
 <body>
     <div class="container">
         <h2>Login</h2>
-        <form action="{% url 'login' %}"  method="post">{% csrf_token %}
+        <form action="{% url 'login' %}" method="post">{% csrf_token %}
             <input type="text" name="username" placeholder="username" required>
             <input type="password" name="password" placeholder="password" required>
             <button type="submit">Login</button>
