applied front end design proposal to background

--- a/finance/api/templates/accountingManagement.html
+++ b/finance/api/templates/accountingManagement.html
@@ -1,37 +1,16 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Usuários</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            display: flex;
-            background-color: #f0f0f0;
-        }
-        .sidebar {
-            width: 60px; /* Largura da sidebar com ícones */
-            height: 100vh; /* Ocupa toda a altura da tela */
-            background-color: #1d9aab;
-            color: white;
-            padding: 20px 0;
-            box-sizing: border-box; /* Inclui padding na largura total */
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .sidebar a {
-            color: white;
-            text-decoration: none;
-            margin: 20px 0;
-            font-size: 18px; /* Tamanho do ícone */
-        }
-        .sidebar a:hover {
-            color: #0056b3; /* Cor ao passar o mouse */
-        }
+        
         .main {
             flex-grow: 1;
             padding: 20px;
@@ -84,15 +63,7 @@
 </head>
 <body>
 
-    <div class="sidebar">
-        <a href="homepage"><i class="fas fa-home"></i></a>
-        <a href="accountingManagement"><i class="fas fa-calculator"></i></a>
-        <a href="financialReport"><i class="fas fa-file-alt"></i></a>
-        <a href="#" onclick="toggleSettings()"><i class="fas fa-cog"></i></a>
-        <div id="settings-menu" style="display:none; text-align:center;">
-            <a href="#" onclick="openPopup()"><i class="fas fa-user-plus"></i></a>
-        </div>
-    </div>
+    {% include 'sidebar.html' %} 
 
     <div class="main">
         <h3>Hi-low Finance | Accounting Management</h3>
